--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -20,7 +20,7 @@
             android:fontFamily="@font/poppins_thin"
             android:text="Add Note."
             android:textStyle="bold"
-            android:textColor="@color/red"
+            android:textColor="@color/black"
             android:textSize="24sp" />
 
         <EditText
