--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="#5970A9"
         tools:context=".HomeFragment">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -15,13 +16,13 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="28dp"
-            android:backgroundTint="#803933"
+            android:backgroundTint="#24615B"
             android:clickable="true"
             android:contentDescription="image"
-            android:tintMode="@color/white"
+            android:tintMode="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_add" />
+            app:srcCompat="@drawable/baseline_add_24" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/homeRecyclerView"
@@ -34,11 +35,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/emptyNotesImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/emptyNotesImage"
+            android:src="@drawable/empty"
             android:visibility="gone"
-            android:src="@drawable/emptybkg"/>
+            tools:layout_editor_absoluteX="35dp"
+            tools:layout_editor_absoluteY="93dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
