--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#F88379</color>
+    <color name="pink">#3E6A65</color>
     <color name="red">#c13b34</color>
+    <color name="blue">#0A4A4C</color>
 </resources>
