--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -17,10 +17,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins_thin"
+            android:fontFamily="@font/poppins"
             android:text="Add Note."
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:textSize="24sp" />
 
         <EditText
@@ -29,25 +29,61 @@
             android:layout_height="60dp"
             android:hint="Enter the title"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_below="@id/addNoteHeading"
             android:background="@drawable/field_border"
             android:layout_marginTop="16dp"
             android:maxLines="1"
-            android:fontFamily="@font/poppins_thin"/>
+            android:fontFamily="@font/poppins"/>
 
         <EditText
             android:id="@+id/addNoteDesc"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
             android:hint="Enter the description"
             android:gravity="top"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textSize="18sp"
-            android:fontFamily="@font/poppins_thin"
+            android:fontFamily="@font/poppins"
             android:background="@drawable/field_border"
             android:layout_below="@id/addNoteTitle"
             android:layout_marginTop="12dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/addNoteDesc"
+            android:layout_marginTop="20dp">
+
+            <DatePicker
+                android:id="@+id/datePicker"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:datePickerMode="spinner"
+                android:calendarViewShown="false"
+                android:layout_gravity="center"
+                android:scaleY="0.7"
+                android:scaleX="0.7"
+                android:layout_marginLeft="-30dp"
+                android:layout_marginRight="-30dp"/>
+
+            <TimePicker
+                android:id="@+id/timePicker"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:timePickerMode="spinner"
+                android:layout_gravity="center"
+                android:scaleY="0.7"
+                android:scaleX="0.7"
+                android:layout_marginLeft="-30dp"
+                android:layout_marginRight="-30dp"/>
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 </layout>
